--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,12 +7,16 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/bg-video";
 @import "components/button";
 @import "components/composition";
-@import "components/feature-box";
 @import "components/card";
+@import "components/feature-box";
+@import "components/form";
+@import "components/story";
 
 @import "layout/grid";
 @import "layout/header";
+@import "layout/footer";
 
 @import "pages/home";
