--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,3 +1,10 @@
 @mixin clearfix {
   display: flow-root;
 }
+
+@mixin center-hv {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
