--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,14 +9,15 @@
 
 @import "components/bg-video";
 @import "components/button";
-@import "components/composition";
 @import "components/card";
+@import "components/composition";
 @import "components/feature-box";
 @import "components/form";
 @import "components/story";
 
+@import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
-@import "layout/footer";
+@import "layout/navigation";
 
 @import "pages/home";
