--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -8,3 +8,49 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+// MEDIA QUERY MANAGER
+/*
+0 - 600px:      Phone
+600 - 900px:    Tablet portrait
+900 - 1200px:   Tablet landscape
+[1200 - 1800] is where normal styles apply
+1800px +:  Big desktop
+
+$breakpoint arguments:
+- phone
+- tab-port
+- tab-land
+- big-desktop
+
+ORDER: Base + typography > general layout, grid > page layout > components
+
+1em = 16px
+*/
+
+@mixin respond($breakpoint) {
+  // 600px / 16 = 37.5
+  @if ($breakpoint == phone) {
+    @media (max-width: 37.5em) {
+      @content;
+    }
+  }
+  // 900px / 16 = 56.25
+  @if ($breakpoint == tab-port) {
+    @media (max-width: 56.25em) {
+      @content;
+    }
+  }
+  // 1200px / 16 = 75
+  @if ($breakpoint == tab-land) {
+    @media (max-width: 75em) {
+      @content;
+    }
+  }
+  // 1800px / 16 = 112.5
+  @if ($breakpoint == big-desktop) {
+    @media (min-width: 112.5em) {
+      @content;
+    }
+  }
+}
