--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,9 +4,20 @@
   padding: 10rem 0;
   font-size: 1.4rem;
 
+  @include respond(tab-port) {
+    padding: 8rem 0;
+  }
+
+  @include respond(phone) {
+  }
+
   &__logo-box {
     text-align: center;
     margin-bottom: 8rem;
+
+    @include respond(tab-port) {
+      margin-bottom: 6rem;
+    }
   }
 
   &__logo {
@@ -18,6 +29,11 @@
     display: inline-block;
     padding-top: 2rem;
     border-top: 1px solid $color-grey-dark;
+
+    @include respond(tab-port) {
+      width: 100%;
+      text-align: center;
+    }
   }
 
   &__list {
@@ -56,5 +72,10 @@
     float: right;
     padding-top: 2rem;
     border-top: 1px solid $color-grey-dark;
+
+    @include respond(tab-port) {
+      width: 100%;
+      float: none;
+    }
   }
 }
