Implement build process and small fixes in styles

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -69,7 +69,7 @@
       transparent 50%
     ),
     url(../img/nat-10.jpg);
-  background-size: cover;
+  background-size: 100%;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
 
@@ -81,6 +81,7 @@
         transparent 65%
       ),
       url(../img/nat-10.jpg);
+    background-size: cover;
   }
 
   @include respond(tab-port) {
