--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -31,25 +31,25 @@ ORDER: Base + typography > general layout, grid > page layout > components
 @mixin respond($breakpoint) {
   // 600px / 16 = 37.5
   @if ($breakpoint == phone) {
-    @media (max-width: 37.5em) {
+    @media screen and (max-width: 37.5em) {
       @content;
     }
   }
   // 900px / 16 = 56.25
   @if ($breakpoint == tab-port) {
-    @media (max-width: 56.25em) {
+    @media screen and (max-width: 56.25em) {
       @content;
     }
   }
   // 1200px / 16 = 75
   @if ($breakpoint == tab-land) {
-    @media (max-width: 75em) {
+    @media screen and (max-width: 75em) {
       @content;
     }
   }
   // 1800px / 16 = 112.5
   @if ($breakpoint == big-desktop) {
-    @media (min-width: 112.5em) {
+    @media screen and (min-width: 112.5em) {
       @content;
     }
   }
