--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -11,6 +11,7 @@
     left: 0;
     width: 100%;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     font-size: 2rem;
     border-radius: 3px;
     overflow: hidden;
@@ -178,7 +179,8 @@
     font-weight: 100;
   }
 
-  @include respond(tab-port) {
+  // @include respond(tab-port) {
+  @media screen and (max-width: 56.25em), screen and (hover: none) {
     height: auto;
     border-radius: 3px;
     background-color: $color-white;
