Fix errors that prevented css prefixing

--- a/assets/sass/components/_popup.scss
+++ b/assets/sass/components/_popup.scss
@@ -97,7 +97,7 @@
     &:link,
     &:visited {
       display: inline-block;
-      color: &color-grey-dark;
+      color: $color-grey-dark;
       position: absolute;
       top: 2.5rem;
       right: 2.5rem;
