--- a/assets/css/style.comp.css
+++ b/assets/css/style.comp.css
@@ -734,7 +734,7 @@ body {
 }
 .popup__close:link, .popup__close:visited {
   display: inline-block;
-  color: .popup__close:link, .popup__close:visited color-grey-dark;
+  color: #777;
   position: absolute;
   top: 2.5rem;
   right: 2.5rem;
@@ -1180,8 +1180,8 @@ body {
 }
 
 .book {
-  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
   background-size: 100%;
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
 }
