--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
- /*
+/*
 0 - 600px:      Phone
 600 - 900px:    Tablet portrait
 900 - 1200px:   Tablet landscape
@@ -756,6 +756,8 @@ body {
   padding: 6rem;
   padding-left: 9rem;
   transform: skewX(-12deg);
+  display: flex;
+  align-items: center;
 }
 @media screen and (max-width: 56.25em) {
   .story {
@@ -775,15 +777,15 @@ body {
 .story__shape {
   height: 15rem;
   width: 15rem;
-  float: left;
+  margin-right: 3rem;
   shape-outside: circle(50% at 50% 50%);
   clip-path: circle(50% at 50% 50%);
-  transform: translateX(-3rem) skewX(12deg);
+  transform: skewX(12deg);
   position: relative;
 }
 @media screen and (max-width: 37.5em) {
   .story__shape {
-    transform: translateX(-3rem) skewX(0);
+    transform: skewX(0);
   }
 }
 .story__img {
@@ -845,7 +847,6 @@ body {
   height: auto;
 }
 .footer__navigation {
-  display: inline-block;
   padding-top: 2rem;
   border-top: 1px solid #777;
 }
@@ -857,12 +858,9 @@ body {
 }
 .footer__list {
   list-style: none;
-}
-.footer__item {
-  display: inline-block;
-}
-.footer__item:not(:last-child) {
-  margin-right: 1.5rem;
+  display: flex;
+  gap: 1.5rem;
+  flex-wrap: wrap;
 }
 .footer__link:link, .footer__link:visited {
   color: #f7f7f7;
@@ -878,22 +876,20 @@ body {
   transform: scale(1.2);
 }
 .footer__copyright {
-  width: 80%;
-  float: right;
   padding-top: 2rem;
   border-top: 1px solid #777;
 }
 @media screen and (max-width: 56.25em) {
   .footer__copyright {
     width: 100%;
-    float: none;
   }
 }
 
 .row {
   max-width: 114rem;
   margin: 0 auto;
-  display: flow-root;
+  display: grid;
+  gap: 6rem;
 }
 .row:not(:last-child) {
   margin-bottom: 8rem;
@@ -909,40 +905,29 @@ body {
     padding: 0 3rem;
   }
 }
-.row [class^=col-] {
-  float: left;
+.row.row-1-of-2 {
+  grid-template-columns: repeat(2, 1fr);
 }
-.row [class^=col-]:not(:last-child) {
-  margin-right: 6rem;
+.row.row-1-of-3 {
+  grid-template-columns: repeat(3, 1fr);
+}
+.row.row-1-of-4 {
+  grid-template-columns: repeat(4, 1fr);
+}
+.row.row-2-of-3 {
+  grid-template-columns: 2fr 1fr;
+}
+.row.row-2-of-4 {
+  grid-template-columns: repeat(2, 1fr) repeat(2, 1fr);
+}
+.row.row-3-of-4 {
+  grid-template-columns: repeat(3, 1fr) 1fr;
 }
 @media screen and (max-width: 56.25em) {
-  .row [class^=col-]:not(:last-child) {
-    margin-right: 0;
-    margin-bottom: 6rem;
+  .row {
+    grid-template-columns: 1fr;
+    gap: 6rem;
   }
-}
-@media screen and (max-width: 56.25em) {
-  .row [class^=col-] {
-    width: 100% !important;
-  }
-}
-.row .col-1-of-2 {
-  width: calc((100% - 6rem) / 2);
-}
-.row .col-1-of-3 {
-  width: calc((100% - 2 * 6rem) / 3);
-}
-.row .col-1-of-4 {
-  width: calc((100% - 3 * 6rem) / 4);
-}
-.row .col-2-of-3 {
-  width: calc(2 * (100% - 2 * 6rem) / 3 + 6rem);
-}
-.row .col-2-of-4 {
-  width: calc(2 * (100% - 3 * 6rem) / 4 + 6rem);
-}
-.row .col-3-of-4 {
-  width: calc(3 * (100% - 3 * 6rem) / 4 + 2 * 6rem);
 }
 
 .header {
