--- a/assets/sass/components/_story.scss
+++ b/assets/sass/components/_story.scss
@@ -7,6 +7,8 @@
   padding: 6rem;
   padding-left: 9rem;
   transform: skewX(-12deg);
+  display: flex;
+  align-items: center;
 
   @include respond(tab-port) {
     width: 100%;
@@ -25,14 +27,14 @@
   &__shape {
     height: 15rem;
     width: 15rem;
-    float: left;
+    margin-right: 3rem;
     shape-outside: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
-    transform: translateX(-3rem) skewX(12deg);
+    transform: skewX(12deg);
     position: relative;
 
     @include respond(phone) {
-      transform: translateX(-3rem) skewX(0);
+      transform: skewX(0);
     }
   }
 
