--- a/assets/sass/layout/_grid.scss
+++ b/assets/sass/layout/_grid.scss
@@ -15,52 +15,37 @@
     padding: 0 3rem;
   }
 
-  @include clearfix;
+  // Basic grid setup
+  display: grid;
+  gap: $gutter-horizontal;
 
-  [class^="col-"] {
-    float: left;
-
-    &:not(:last-child) {
-      margin-right: $gutter-horizontal;
-
-      @include respond(tab-port) {
-        margin-right: 0;
-        margin-bottom: $gutter-vertical-small;
-      }
-    }
-
-    @include respond(tab-port) {
-      width: 100% !important;
-    }
+  // Different grid configurations
+  &.row-1-of-2 {
+    grid-template-columns: repeat(2, 1fr);
   }
 
-  .col-1-of-2 {
-    width: calc((100% - #{$gutter-horizontal}) / 2);
+  &.row-1-of-3 {
+    grid-template-columns: repeat(3, 1fr);
   }
 
-  .col-1-of-3 {
-    width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
+  &.row-1-of-4 {
+    grid-template-columns: repeat(4, 1fr);
   }
 
-  .col-1-of-4 {
-    width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
+  &.row-2-of-3 {
+    grid-template-columns: 2fr 1fr;
   }
 
-  .col-2-of-3 {
-    width: calc(
-      2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal}
-    );
+  &.row-2-of-4 {
+    grid-template-columns: repeat(2, 1fr) repeat(2, 1fr);
   }
 
-  .col-2-of-4 {
-    width: calc(
-      2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal}
-    );
+  &.row-3-of-4 {
+    grid-template-columns: repeat(3, 1fr) 1fr;
   }
 
-  .col-3-of-4 {
-    width: calc(
-      3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal}
-    );
+  @include respond(tab-port) {
+    grid-template-columns: 1fr;
+    gap: $gutter-vertical-small;
   }
 }
